# weaver

./: .gitignore  README.md  pyproject.toml
tests/: huggingface.py  recursive_case.py  test_artefact_registry.py  test_base_types.py  test_roundtrip_json.py  test_simple_cases.py  test_sklearn.py
weaver/: __init__.py  artefact_registry.py  data.py  reader.py  registry.py  resource.py  serializer.py  unweave.py  version.py  weave.py
